// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.multicluster.v1alpha1;

import "pbresource/annotations.proto";
import "pbresource/resource.proto";

message ComputedExportedServices {
  option (hashicorp.consul.resource.spec) = {scope: SCOPE_PARTITION};

  repeated ComputedExportedService consumers = 1;
}

message ComputedExportedService {
  hashicorp.consul.resource.ID target_ref = 1;
  repeated ComputedExportedServicesConsumer consumers = 2;
}

message ComputedExportedServicesConsumer {
  // no sameness group
  oneof consumer_tenancy {
    string peer = 3;
    string partition = 4;
  }
}
